Wrap movies in #g-movie, apply ui-helper-clearfix to the pager and g-moive to fix clear issues reported in ticket #873.

--- a/themes/wind/css/screen.css
+++ b/themes/wind/css/screen.css
@@ -129,6 +129,9 @@ td {
   border: none;
   border-bottom: 1px solid #ccc;
   padding: .5em;
+}
+
+td {
   vertical-align: top;
 }
 
@@ -274,18 +277,25 @@ td {
 
 /* Individual photo content ~~~~~~~~~~~~~~ */
 
-#g-content #g-item {
+#g-item {
   position: relative;
   width: 100%;
 }
 
-#g-content #g-photo {
+#g-item #g-photo,
+#g-item #g-movie {
+  padding: 1em 0;
+}
+
+#g-item #g-photo,
+#g-item #g-movie {
   position: relative;
 }
 
-#g-content #g-item .g-fullsize-link img {
+#g-item img.g-resize,
+#g-item a.g-movie object {
   display: block;
-  margin: 1em auto;
+  margin: 0 auto;
 }
 
 /* Footer content ~~~~~~~~~~~~~~~~~~~~~~~~ */
